// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/User Renders Default story 1`] = `
<body>
  <div>
    <div
      class="flex undefined"
    >
      <div
        class="avatar online undefined"
      >
        <div
          class="w-12 rounded-full"
        >
          <img
            alt="@johndoe"
            height="48px"
            src="https://images.unsplash.com/photo-1584361853901-dd1904bb7987?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80"
            width="48px"
          />
        </div>
      </div>
      <div
        class="flex flex-col ml-4"
      >
        <div>
          @johndoe
        </div>
        <div>
          🍅 × 
          12
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/User Renders isOffline story 1`] = `
<body>
  <div>
    <div
      class="flex undefined"
    >
      <div
        class="avatar offline undefined"
      >
        <div
          class="w-12 rounded-full"
        >
          <img
            alt="@johndoe"
            height="48px"
            src="https://images.unsplash.com/photo-1584361853901-dd1904bb7987?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80"
            width="48px"
          />
        </div>
      </div>
      <div
        class="flex flex-col ml-4"
      >
        <div>
          @johndoe
        </div>
        <div>
          🍅 × 
          12
        </div>
      </div>
    </div>
  </div>
</body>
`;
